[project]
name = "vibe-content-agent"
version = "0.1.0"
description = "Creative AI content agent for AI/dev news, personal vibe-coding projects, and multi-platform drafts."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.2",
  "jinja2>=3.1.4",
  "openai>=1.54.0",
  "pillow>=11.0.0",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.20",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.4",
]

[project.scripts]
vibe-agent = "vibe_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# core.py is the shared layer: its imports are deliberately re-exported to the
# router modules via `from vibe_agent.web.core import *`. Routers rely on that
# star import for shared symbols (helpers, globals, FastAPI types, stdlib).
"src/vibe_agent/web/core.py" = ["F401"]
"src/vibe_agent/web/routers/*.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
